--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -22,6 +22,9 @@
     <div class="mb-3">
         <%= form.label :password_confirmation %>
         <%= form.password_field :password_confirmation, class: "form-control", placeholder: "your password" %>
+    </div>
+
+    <div class="mb-3">
         <%=form.submit "Create New Account", class: "btn btn-primary" %>
     </div>
 <%end%>
