--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,6 +23,10 @@
         <li class="nav-item">
         <%= link_to "Sign_Up", sign_up_path, class: "nav-link" %>
         </li>
+
+        <li class="nav-item">
+        <%= link_to "Sign_In", sign_in_path, class: "nav-link" %>
+        </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
