--- a/app/views/coworks/new.html.erb
+++ b/app/views/coworks/new.html.erb
@@ -1,7 +1,18 @@
 <h1> Create New Cowork </h1>
 
-<%= form_with(model: @cowork, url: coworkers_path, method: :post) do |form| %>
-    <%= form.text_field :name %>
-    <%= form.text_field :address %>
-    <%= form.submit 'Create Cowork' %>
-  <% end %>
+<%= form_with url: coworks_path do |form| %>
+    <div class="mb-3">
+        <%= form.label :name %>
+        <%= form.text_field :name, class: "form-control", placeholder: "cowork name" %>
+    </div>
+    
+    <div class="mb-3">
+        <%= form.label :address %>
+        <%= form.text_field :address, class: "form-control", placeholder: "cowork address" %>
+    </div>
+
+    <div class="mb-3">
+    <%=form.submit "Create New Cowork", class: "btn btn-primary" %>
+    </div>
+
+<%end%>
