--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,18 +14,24 @@
             <a class="dropdown-item" href="#">Cowork_1</a>
             <a class="dropdown-item" href="#">Cowork_2</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/create">Create a New</a>
+            <a class="dropdown-item" href="/coworks">Create a New</a>
         </div>
         </li>
+
         <li class="nav-item">
-        <%= link_to "About", about_path, class: "nav-link" %>
+        <%= link_to "Inscription", inscription_path, class: "nav-link" %>
         </li>
+
         <li class="nav-item">
         <%= link_to "Sign_Up", sign_up_path, class: "nav-link" %>
         </li>
 
         <li class="nav-item">
         <%= link_to "Sign_In", sign_in_path, class: "nav-link" %>
+        </li>
+
+        <li class="nav-item">
+        <%= link_to "About", about_path, class: "nav-link" %>
         </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
